# introduction-to-CMake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: dog.cpp  main.cpp
